# SkeletalMeshAnimation

./: AnimatedMesh.cpp  AnimatedMesh.h  AnimatedMeshNode.cpp  AnimatedMeshNode.h  AnimatedModelData.h  AnimatedModelLoader.cpp  AnimatedModelLoader.h  Application.cpp  Application.hpp  CMakeLists.txt  ColladaLoader.cpp  ColladaLoader.h  Context.cpp  Context.hpp  Control.cpp  Control.hpp  Cowboy.cpp  Cowboy.h  Debug.hpp  GLError.cpp  GLIncludes.hpp  GLSL.cpp  GLSL.hpp  GeometryLoader.cpp  GeometryLoader.h  InputManager.cpp  InputManager.hpp  Joint.cpp  Joint.h  JointData.h  Makefile.linux  Makefile.macosx  Mesh.h  MeshData.h  Node.cpp  Node.hpp  Robot.cpp  Robot.hpp  RotationMode.hpp  SceneGraph.cpp  (+33 more)
cmake/: FindGLM.cmake
meshes/: cube.off
rapidxml-1.13/: rapidxml_helper.hpp
shaders/: LightSource.h  Material.h  color.frag  color.vert  diffuse.frag  diffuse.vert  skeletal.frag  skeletal.vert
